@@ -794,7 +794,7 @@ class browse_links {
 		$this->doc = t3lib_div::makeInstance('template');
 		$this->doc->backPath = $GLOBALS['BACK_PATH'];
 			// Load the Prototype library and browse_links.js
-		$this->doc->loadJavascriptLib('contrib/prototype/prototype.js');
+		$this->doc->loadPrototype();
 		$this->doc->loadJavascriptLib('js/browse_links.js');
 
 			// init hook objects:
