@@ -51,7 +51,14 @@ class tx_feedit_adminpanel {
 	 */
 	public function display() {
 		$out = '<script type="text/javascript" src="t3lib/js/adminpanel.js"></script>';
-
+		//CSS
+        $GLOBALS['TSFE']->additionalHeaderData['admPanelCSS'] = '<link rel="stylesheet" type="text/css" href="' . t3lib_extMgm::extRelPath('fe_edit') . 'admpanel.css' . '" />';
+        if(!empty($GLOBALS['TBE_STYLES']['stylesheets']['admPanel'])) {
+				$GLOBALS['TSFE']->additionalHeaderData['admPanelCSS-Skin'] = '
+			<link rel="stylesheet" type="text/css" href="' . $GLOBALS['TBE_STYLES']['stylesheets']['admPanel'].'" />
+				';
+		}
+			
 		if ($GLOBALS['BE_USER']->uc['TSFE_adminConfig']['display_top']) {
 			if ($GLOBALS['BE_USER']->frontendEdit->isAdminModuleEnabled('preview')) {
 				$out .= $this->getPreviewModule();
@@ -146,7 +153,7 @@ $query . '
 		}
 
 		$out = '
-		<div onmousedown="TYPO3AdminPanel.dragStart(this)" onmouseup="TYPO3AdminPanel.savePosition(this)" id="admPanel" style="position:absolute; left:10px; top:100px; width:30px; z-index:5;">
+		<div onmousedown="TYPO3AdminPanel.dragStart(this)" onmouseup="TYPO3AdminPanel.savePosition(this)" id="admPanel">
 		' . $out . '
 		<br /></div>
 		<script type="text/javascript">
